test/fail_compilation/b17918.d
/*
TEST_OUTPUT:
---
fail_compilation/imports/b17918a.d(7): Error: undefined identifier `_listMap`
---
*/
import imports.b17918a;

class Derived : Base
{
}
